--- a/wordpress.yml
+++ b/wordpress.yml
@@ -25,6 +25,9 @@
       mysql_user:
                name: root
                password: Aa123456
+               login_user: root
+               login_password: Aa123456
+               check_implicit_admin: yes
                priv: "*.*:ALL,GRANT"
                login_unix_socket: /var/run/mysqld/mysqld.sock
       become: yes
