configuraton with vars, template and conditional

--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -14,8 +14,8 @@
     
     - name: 'wordpress site config'
       copy:
-        src:  wordpress_site.conf
-        dest: /etc/nginx/sites-available/wordpress.conf
+        src: 'wordpress_site.conf'
+        dest: '/etc/nginx/sites-available/wordpress.conf'
       become: yes
 
     - name: remove nginx default site
@@ -23,6 +23,13 @@
       ansible.builtin.file:
                          path: /etc/nginx/sites-enabled/default
                          state: absent
+     
+    - name: Create wortpress site from template
+      become: yes 
+      template: 
+        src: 'wordpress_site.conf'
+        dest: '/etc/nginx/sites-available/wordpress.conf'
+
 
     - name: Create a symbolic link
       become: yes
