--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -20,9 +20,9 @@
     - name: set root mysql password
       mysql_user:
                name: root
-               password: "{{ root_password }}"
+               password: "{{ mysql_root_password }}"
                login_user: root
-               login_password: "{{ root_password }}"
+               login_password: "{{ mysql_root_password }}"
                check_implicit_admin: yes
                priv: "*.*:ALL,GRANT"
                login_unix_socket: /var/run/mysqld/mysqld.sock
@@ -30,20 +30,19 @@
 
     - name: 'create wordpress db'
       mysql_db:
-             name: 'wordpress_db'
+             name: '{{ mysql_wp_db_name }}'
              state: present
              login_user: root
-             login_password: "{{ root_password }}"
+             login_password: "{{ mysql_root_password }}"
              login_unix_socket: /var/run/mysqld/mysqld.sock
       become: yes
 
     - name: Create Wordpress mysql user
       mysql_user:
-             name: 'wordpress_user'
-             password: 'my_password'
-             priv: '*.*:ALL'
+             name: "{{ mysql_wp_db_user }}"
+             password: "{{ mysql_wp_db_user_pass }}"
+             priv: "*.*:ALL"
              login_user: root
-             login_password: "{{ root_password }}"
+             login_password: "{{ mysql_root_password }}"
              login_unix_socket: /var/run/mysqld/mysqld.sock
       become: yes
-
