--- a/wordpress.yml
+++ b/wordpress.yml
@@ -1,7 +1,7 @@
 ---
 - hosts: 'webserver'
   roles:
-          - role: 'mysql'
+#          - role: 'mysql'
           - role: 'nginx'
           - role: 'wordpress'
 
