--- a/roles/wordpress/vars/main.yml
+++ b/roles/wordpress/vars/main.yml
@@ -2,3 +2,7 @@
 # vars file for wordpress
  wordpress_files_path: /var/www/wordpress
  wordpress_downloading_site: 'http://wordpress.org/latest.tar.gz'
+ mysql_wp_db_name: 'wordpressdb'
+ mysql_wp_db_user: 'admin'
+ mysql_wp_db_user_pass: 'Aa123456+'
+
